# demo

./: .gitignore  README.md  my-file.txt  mybook.ipynb  pyproject.toml
