[tool.poetry]
name = "demo"
version = "0.1.0"
description = ""
authors = ["Janakiram Karlpudi <janakiramkarlapudi841@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.27.0"
pyshacl = "^0.25.0"
rdflib = "^7.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
